--- a/nasa-project/server/package.json
+++ b/nasa-project/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
+    "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "pm2": "^5.2.2"
   },
