--- a/nasa-project/server/package.json
+++ b/nasa-project/server/package.json
@@ -17,6 +17,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
