--- a/nasa-project/server/package.json
+++ b/nasa-project/server/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
