--- a/security-example/package.json
+++ b/security-example/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
