--- a/security-example/package.json
+++ b/security-example/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "helmet": "^6.0.1",
