--- a/nasa-project/server/package.json
+++ b/nasa-project/server/package.json
@@ -17,18 +17,18 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
-    "csv-parse": "^4.15.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "mongoose": "^6.8.2",
+    "csv-parse": "^5.0.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
-    "pm2": "^5.2.2"
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.7",
-    "supertest": "^6.3.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.15",
+    "supertest": "6.1.6"
   }
 }
